force-app/main/default/objects/PickingList__c/PickingList__c.object-meta.xml
<CustomObject>
    <label>ピッキングリスト</label>
    <nameField>
        <displayFormat>PCL-{00000000}</displayFormat>
        <label>ピッキングリスト#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>