force-app/main/default/objects/PickingList__c/fields/LotNumber__c.field-meta.xml
<CustomField>
    <fullName>LotNumber__c</fullName>
    <formula>ProductStockInfo__r.LotNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ロット番号</label>
    <type>Text</type>
</CustomField>