force-app/main/default/objects/PickingList__c/fields/OrderDetail__c.field-meta.xml
<CustomField>
    <fullName>OrderDetail__c</fullName>
    <label>注文明細</label>
    <referenceTo>OrderDetail__c</referenceTo>
    <relationshipLabel>ピッキングリスト (注文明細)</relationshipLabel>
    <relationshipName>PickingList</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>