force-app/main/default/objects/PickingList__c/fields/OrderHeader__c.field-meta.xml
<CustomField>
    <fullName>OrderHeader__c</fullName>
    <label>注文</label>
    <referenceTo>OrderHeader__c</referenceTo>
    <relationshipLabel>ピッキングリスト (注文)</relationshipLabel>
    <relationshipName>PickingList</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>