force-app/main/default/objects/PickingList__c/fields/PrintDateTime__c.field-meta.xml
<CustomField>
    <fullName>PrintDateTime__c</fullName>
    <label>印刷日時</label>
    <type>DateTime</type>
</CustomField>