force-app/main/default/objects/PickingList__c/fields/PrintHistory__c.field-meta.xml
<CustomField>
    <fullName>PrintHistory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>印刷履歴</label>
    <referenceTo>PrintHistory__c</referenceTo>
    <relationshipLabel>ピッキングリスト</relationshipLabel>
    <relationshipName>PickingList</relationshipName>
    <type>Lookup</type>
</CustomField>