force-app/main/default/objects/PickingList__c/fields/ProductMaster__c.field-meta.xml
<CustomField>
    <fullName>ProductMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>商品マスタ</label>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipLabel>ピッキングリスト</relationshipLabel>
    <relationshipName>PickingList</relationshipName>
    <type>Lookup</type>
</CustomField>