force-app/main/default/objects/PickingList__c/fields/ProductStockInfo__c.field-meta.xml
<CustomField>
    <fullName>ProductStockInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Raysheetに入力が必要な必須項目</description>
    <label>在庫情報</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>商品名が一致していません。</errorMessage>
        <filterItems>
            <field>ProductStockInfo__c.ProductMaster__c</field>
            <operation>equals</operation>
            <valueField>$Source.ProductMaster__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProductStockInfo__c</referenceTo>
    <relationshipLabel>ピッキングリスト</relationshipLabel>
    <relationshipName>PickingList</relationshipName>
    <type>Lookup</type>
</CustomField>