force-app/main/default/objects/PickingList__c/fields/RemainingQuantity_F__c.field-meta.xml
<CustomField>
    <fullName>RemainingQuantity_F__c</fullName>
    <description>在庫情報が空白の場合、注文明細の数量-注文明細のピッキング済み数で表示。
在庫情報がある場合、空白で表示</description>
    <formula>OrderDetail__r.RemainingQuantity_F__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>未ピッキング数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>