force-app/main/default/objects/PickingList__c/fields/Shipped__c.field-meta.xml
<CustomField>
    <fullName>Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>出庫済み</label>
    <type>Checkbox</type>
</CustomField>