force-app/main/default/objects/PickingList__c/validationRules/CannotUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotUpdate</fullName>
    <active>true</active>
    <description>注文の「状態：請求処理済」の場合、「ピッキングリスト」は変更できません。</description>
    <errorConditionFormula>NOT( ISNEW() )
&amp;&amp;
 NOT( ISCHANGED( PrintHistory__c ) ) 
&amp;&amp;
ISPICKVAL( OrderHeader__r.Status__c , &quot;InvoiceConfirmed&quot;)</errorConditionFormula>
    <errorMessage>注文の「状態：請求処理済」の場合、「ピッキングリスト」は変更できません。</errorMessage>
</ValidationRule>