force-app/main/default/objects/PickingList__c/validationRules/OrderDetailProductNotMatch.validationRule-meta.xml
<ValidationRule>
    <fullName>OrderDetailProductNotMatch</fullName>
    <active>true</active>
    <description>注文明細の「商品マスタ」とピッキングリストの「商品マスタ」は一致していません。</description>
    <errorConditionFormula>/* 判定条件 */
NOT(ISBLANK(ProductMaster__c))
&amp;&amp;
/* 判定項目 */
OrderDetail__r.ProductMaster__c &lt;&gt; ProductMaster__c</errorConditionFormula>
    <errorMessage>注文明細の「商品マスタ」とピッキングリストの「商品マスタ」は一致していません。</errorMessage>
</ValidationRule>